--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ node_modules/
 
 # misc
 .DS_Store
+# variable denvironement 
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,3 +26,6 @@ yarn-error.log*
 # IDE
 .vscode/
 .idea/
+
+
+
